language/move-lang/tests/move_check/typing/implicit_deref_borrow_field_from_non_struct.exp
error: 

   ┌── tests/move_check/typing/implicit_deref_borrow_field_from_non_struct.move:6:9 ───
   │
 6 │         0.f;
   │         - Could not infer the type. Try annotating here
   │         ^^^ Unbound field 'f'
   │

error: 

   ┌── tests/move_check/typing/implicit_deref_borrow_field_from_non_struct.move:7:9 ───
   │
 7 │         0.g;
   │         - Could not infer the type. Try annotating here
   │         ^^^ Unbound field 'g'
   │

error: 

   ┌── tests/move_check/typing/implicit_deref_borrow_field_from_non_struct.move:5:15 ───
   │
 5 │     fun t0(u: u64, cond: bool, addr: address) {
   │               --- Expected a struct type in the current module but got: 'u64'
   ·
 8 │         u.value;
   │         ^^^^^^^ Unbound field 'value'
   │

error: 

   ┌── tests/move_check/typing/implicit_deref_borrow_field_from_non_struct.move:5:26 ───
   │
 5 │     fun t0(u: u64, cond: bool, addr: address) {
   │                          ---- Expected a struct type in the current module but got: 'bool'
   ·
 9 │         cond.value;
   │         ^^^^^^^^^^ Unbound field 'value'
   │

error: 

    ┌── tests/move_check/typing/implicit_deref_borrow_field_from_non_struct.move:5:38 ───
    │
  5 │     fun t0(u: u64, cond: bool, addr: address) {
    │                                      ------- Expected a struct type in the current module but got: 'address'
    ·
 10 │         addr.R;
    │         ^^^^^^ Unbound field 'R'
    │

error: 

    ┌── tests/move_check/typing/implicit_deref_borrow_field_from_non_struct.move:5:38 ───
    │
  5 │     fun t0(u: u64, cond: bool, addr: address) {
    │                                      ------- Expected a struct type in the current module but got: 'address'
    ·
 11 │         addr.f;
    │         ^^^^^^ Unbound field 'f'
    │

error: 

    ┌── tests/move_check/typing/implicit_deref_borrow_field_from_non_struct.move:12:9 ───
    │
 12 │         ().R;
    │         -- Expected a single type, but found expression list type: '()'
    │         ^^ Invalid dot access
    │

error: 

    ┌── tests/move_check/typing/implicit_deref_borrow_field_from_non_struct.move:12:9 ───
    │
 12 │         ().R;
    │         -- Expected a struct type in the current module but got: '()'
    │         ^^^^ Unbound field 'R'
    │

error: 

    ┌── tests/move_check/typing/implicit_deref_borrow_field_from_non_struct.move:13:9 ───
    │
 13 │         (S{f: 0}, S{f:0}).f;
    │         ----------------- Expected a single type, but found expression list type: '(0x8675309::M::S, 0x8675309::M::S)'
    │         ^^^^^^^^^^^^^^^^^ Invalid dot access
    │

error: 

    ┌── tests/move_check/typing/implicit_deref_borrow_field_from_non_struct.move:13:9 ───
    │
 13 │         (S{f: 0}, S{f:0}).f;
    │         ----------------- Expected a struct type in the current module but got: '(0x8675309::M::S, 0x8675309::M::S)'
    │         ^^^^^^^^^^^^^^^^^^^ Unbound field 'f'
    │

